--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -34,18 +34,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
-    "l = [######]\n",
-    "f = lambda x: #define the lambda expression\n",
+    "l = [1,2,3,4,5,6,7,8,9,10]\n",
+    "f = lambda x: x*2\n",
     "b = []\n",
-    "def modify_list(lst, fudduLambda):\n",
-    "    for x in ####:\n",
-    "        b.append(#####(x))\n",
-    "#Call modify_list(##,##)\n",
-    "#print b"
+    "def modify_list(l,f):\n",
+    "    for x in l:\n",
+    "        b.append(f(x))\n",
+    "    return b\n",
+    "a=modify_list(l,f)\n",
+    "print(a)"
    ]
   },
   {
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,13 +85,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[285.15, 296.15, 311.15, 218.14999999999998, 297.15]\n"
+     ]
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
-    "\n",
-    "# Your code here:"
+    "g= lambda x: x + 273.15\n",
+    "c=[]\n",
+    "def modify_temperature(temps, g):\n",
+    "    for x in temps:\n",
+    "        c.append(g(x))\n",
+    "    return c\n",
+    "a=modify_temperature(temps,g)\n",
+    "print(a)"
    ]
   },
   {
@@ -96,11 +119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "mod= lambda a,b: 1 if a % b == 0 else 0\n",
+    "#mod(10,5)"
    ]
   },
   {
@@ -114,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +160,12 @@
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    num=5\n",
+    "    return lambda b,num:1 if b%num==0 else 0\n",
+    "\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -136,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,20 +193,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.divisor.<locals>.<lambda>(b, num)>"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "divisible5(10)"
+    "divisor(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.divisor.<locals>.<lambda>(b, num)>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "divisible5(8)"
+    "divisor(8)"
    ]
   },
   {
@@ -183,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +258,7 @@
        " ('tomato', 'tomato')]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,14 +281,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (2, 3), (3, 4), (4, 5)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
     "## Zip the lists together \n",
-    "## Print the zipped list "
+    "## Print the zipped list \n",
+    "zipped=zip(list1,list2)\n",
+    "list(zipped)"
    ]
   },
   {
@@ -237,28 +313,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n\\ncompare = lambda ###: print(\"True\") if ### else print(\"False\")\\nfor ### in zip(list1,list2):\\n    compare(###)\\n    \\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
     "\n",
-    "compare = lambda ###: print(\"True\") if ### else print(\"False\")\n",
-    "for ### in zip(list1,list2):\n",
-    "    compare(###)\n",
-    "    \n",
-    "'''    "
+    "\n",
+    "compare = lambda x,y: print(\"True\") if x>y else print(\"False\")\n",
+    "for i in zip(list1,list2):\n",
+    "    compare(i[0],i[1])\n",
+    "       "
    ]
   },
   {
@@ -274,14 +349,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Political Science', 'Essay'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Engineering', 'Lab'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "\n",
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "zipped=zip(list1,list2)\n",
+    "a=list(zipped)\n",
+    "sorted_zip=sorted(a, key=lambda x: x[1][0])\n",
+    "sorted_zip\n"
    ]
   },
   {
@@ -295,13 +388,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('Honda', 1997), ('Toyota', 1995), ('Audi', 2001), ('BMW', 2005)])\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'Honda': 1997, 'Toyota': 1995, 'Audi': 2001, 'BMW': 2005}\n",
     "\n",
-    "# Your code here:"
+    "# Your code here:\n",
+    "print(d.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_d = sorted(d.items(), key=lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Toyota', 1995), ('Honda', 1997), ('Audi', 2001), ('BMW', 2005)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted_d"
    ]
   },
   {
@@ -328,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
