--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +50,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(33183, 8)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "display(salaries.head())\n",
+    "print(salaries.shape)\n"
    ]
   },
   {
@@ -64,11 +193,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False    33183\n",
+      "Name: Name, dtype: int64\n",
+      "False    33183\n",
+      "Name: Job Titles, dtype: int64\n",
+      "False    33183\n",
+      "Name: Department, dtype: int64\n",
+      "False    33183\n",
+      "Name: Full or Part-Time, dtype: int64\n",
+      "False    33183\n",
+      "Name: Salary or Hourly, dtype: int64\n",
+      "True     25161\n",
+      "False     8022\n",
+      "Name: Typical Hours, dtype: int64\n",
+      "False    25161\n",
+      "True      8022\n",
+      "Name: Annual Salary, dtype: int64\n",
+      "True     25161\n",
+      "False     8022\n",
+      "Name: Hourly Rate, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "def checking_nulls(df):\n",
+    "    if True:\n",
+    "        print(salaries[\"Name\"].isnull().value_counts())\n",
+    "        print(salaries[\"Job Titles\"].isnull().value_counts())\n",
+    "        print(salaries[\"Department\"].isnull().value_counts())\n",
+    "        print(salaries[\"Full or Part-Time\"].isnull().value_counts())\n",
+    "        print(salaries[\"Salary or Hourly\"].isnull().value_counts())\n",
+    "        print(salaries[\"Typical Hours\"].isnull().value_counts())\n",
+    "        print(salaries[\"Annual Salary\"].isnull().value_counts())\n",
+    "        print(salaries[\"Hourly Rate\"].isnull().value_counts())\n",
+    "\n",
+    "checking_nulls(salaries)        "
    ]
   },
   {
@@ -80,12 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salary    25161\n",
+      "Hourly     8022\n",
+      "Name: Salary or Hourly, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "print(salaries[\"Salary or Hourly\"].value_counts())"
    ]
   },
   {
@@ -262,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
