--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -283,11 +283,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POLICE                   13414\n",
+      "FIRE                      4641\n",
+      "STREETS & SAN             2198\n",
+      "OEMC                      2102\n",
+      "WATER MGMNT               1879\n",
+      "AVIATION                  1629\n",
+      "TRANSPORTN                1140\n",
+      "PUBLIC LIBRARY            1015\n",
+      "GENERAL SERVICES           980\n",
+      "FAMILY & SUPPORT           615\n",
+      "FINANCE                    560\n",
+      "HEALTH                     488\n",
+      "CITY COUNCIL               411\n",
+      "LAW                        407\n",
+      "BUILDINGS                  269\n",
+      "COMMUNITY DEVELOPMENT      207\n",
+      "BUSINESS AFFAIRS           171\n",
+      "COPA                       116\n",
+      "BOARD OF ELECTION          107\n",
+      "DoIT                        99\n",
+      "PROCUREMENT                 92\n",
+      "INSPECTOR GEN               87\n",
+      "MAYOR'S OFFICE              85\n",
+      "CITY CLERK                  84\n",
+      "ANIMAL CONTRL               81\n",
+      "HUMAN RESOURCES             79\n",
+      "CULTURAL AFFAIRS            65\n",
+      "BUDGET & MGMT               46\n",
+      "ADMIN HEARNG                39\n",
+      "DISABILITIES                28\n",
+      "TREASURER                   22\n",
+      "HUMAN RELATIONS             16\n",
+      "BOARD OF ETHICS              8\n",
+      "POLICE BOARD                 2\n",
+      "LICENSE APPL COMM            1\n",
+      "Name: Department, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(salaries[\"Department\"].value_counts())"
    ]
   },
   {
