--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -335,10 +335,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import ttest_1samp, stats, t\n",
+    "\n",
+    "stats.ttest_1samp(salaries['Hourly Rate'].dropna(axis=0), 30)\n",
+    "\n",
+    "# We reject the null hypothesis"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,11 +368,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "stats.ttest_1samp(salaries[salaries['Department'] == 'POLICE']['Annual Salary'].dropna(axis=0), 86000)\n",
+    "\n",
+    "# We reject the null hypothesis"
    ]
   },
   {
@@ -367,11 +397,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WATER MGMNT</th>\n",
+       "      <td>1513</td>\n",
+       "      <td>366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OEMC</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1082</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GENERAL SERVICES</th>\n",
+       "      <td>765</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336\n",
+       "WATER MGMNT         1513     366\n",
+       "OEMC                1273     829\n",
+       "AVIATION            1082     547\n",
+       "GENERAL SERVICES     765     215"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "pd.crosstab(salaries['Department'], salaries['Salary or Hourly'], dropna=False).sort_values(\"Hourly\", ascending=False).head()                                    "
    ]
   },
   {
@@ -383,11 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "stats.ttest_1samp(salaries[salaries['Department'] == 'STREETS & SAN']['Hourly Rate'].dropna(axis=0), 35)\n",
+    "\n",
+    "# We reject the null hypothesis\n"
    ]
   },
   {
