--- a/module-2/lab-probability-distribution/your_code/main.ipynb
+++ b/module-2/lab-probability-distribution/your_code/main.ipynb
@@ -12,11 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries\n"
+    "# Import your libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -399,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
