--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "(33183, 8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "Name: Salary or Hourly, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "Name: Department, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -344,13 +344,13 @@
        "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scipy.stats import ttest_1samp, stats, t\n",
+    "from scipy.stats import ttest_1samp, t\n",
     "\n",
     "stats.ttest_1samp(salaries['Hourly Rate'].dropna(axis=0), 30)\n",
     "\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "GENERAL SERVICES     765     215"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
    "source": [
     "stats.ttest_1samp(salaries[salaries['Department'] == 'STREETS & SAN']['Hourly Rate'].dropna(axis=0), 35)\n",
     "\n",
-    "# We reject the null hypothesis\n"
+    "# We reject the null hypothesis"
    ]
   },
   {
@@ -529,11 +529,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>46.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>35.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>17.68</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Hourly Rate\n",
+       "4         19.86\n",
+       "6         46.10\n",
+       "7         35.60\n",
+       "10         2.65\n",
+       "18        17.68"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "hourly_wage = salaries[['Hourly Rate']].copy().dropna(axis=0)\n",
+    "hourly_wage.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8021"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "degrees_of_freedom = len(hourly_wage) - 1\n",
+    "degrees_of_freedom\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Hourly Rate    32.788558\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = hourly_wage.mean()\n",
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1352368565101596"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standard_error = stats.sem(hourly_wage, axis=None)\n",
+    "standard_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-134-257c2f731e8d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmean_confidence_interval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhourly_wage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfidence\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.95\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The confidence interval of the hourly wage is {} - {} and the mean is {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def mean_confidence_interval(hourly_wage, confidence=0.95):\n",
+    "    m, se = mean, standard_error\n",
+    "    h = se * t.ppf((1 + confidence) / 2., degrees_of_freedom)\n",
+    "    return m, m-h, m+h\n",
+    "\n",
+    "print(mean_confidence_interval(hourly_wage, confidence=0.95))\n",
+    "print('The confidence interval of the hourly wage is {} - {} and the mean is {}'.format(m-h,m+h,m))"
    ]
   },
   {
