--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -692,11 +692,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.780077183391256, 32.79703824916922)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "from scipy.stats import *\n",
+    "mean=salaries[salaries['Hourly Rate'].isna()==False]['Hourly Rate'].mean()\n",
+    "std_error=sem(salaries[salaries['Hourly Rate'].isna()==False]['Hourly Rate'])\n",
+    "conf=t.interval(.05, len(salaries[salaries['Hourly Rate'].isna()==False]['Hourly Rate'])-1, loc=mean, scale=std_error)\n",
+    "conf"
    ]
   },
   {
@@ -708,11 +723,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86476.5176546444, 86496.31135162238)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "mean1=salaries[(salaries['Annual Salary'].isna()==False)&(salaries[\"Department\"]==\"POLICE\")]['Annual Salary'].mean()\n",
+    "std_error1=sem(salaries[(salaries['Annual Salary'].isna()==False)&(salaries[\"Department\"]==\"POLICE\")]['Annual Salary'])\n",
+    "conf1=t.interval(.05, len(salaries[(salaries['Annual Salary'].isna()==False)&(salaries[\"Department\"]==\"POLICE\")]['Annual Salary'])-1, loc=mean1, scale=std_error1)\n",
+    "conf1"
    ]
   },
   {
@@ -730,12 +759,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "from statsmodels.stats.proportion import proportions_ztest"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prop=proportions_ztest(len(salaries[salaries[\"Hourly Rate\"].isna()==False][\"Hourly Rate\"]),salaries.shape[0],0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#this rejects the null hyptothesis, the proportion of hourly workers is not close to 0.25 and must actually be lower\n",
+    "#as the p-value is lower than 0.05 and the statistic is <0."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
