--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,11 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import sem, t, ttest_1samp"
    ]
   },
   {
@@ -30,12 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run this code:\n",
-    "\n",
     "salaries = pd.read_csv('../Current_Employee_Names__Salaries__and_Position_Titles.csv')"
    ]
   },
@@ -48,11 +52,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.head()"
    ]
   },
   {
@@ -64,11 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 33183 entries, 0 to 33182\n",
+      "Data columns (total 8 columns):\n",
+      "Name                 33183 non-null object\n",
+      "Job Titles           33183 non-null object\n",
+      "Department           33183 non-null object\n",
+      "Full or Part-Time    33183 non-null object\n",
+      "Salary or Hourly     33183 non-null object\n",
+      "Typical Hours        8022 non-null float64\n",
+      "Annual Salary        25161 non-null float64\n",
+      "Hourly Rate          8022 non-null float64\n",
+      "dtypes: float64(3), object(5)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.info()"
    ]
   },
   {
@@ -80,12 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "salaries[\"Salary or Hourly\"].value_counts()"
    ]
   },
   {
@@ -104,11 +262,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Department\n",
+       "ADMIN HEARNG           39\n",
+       "ANIMAL CONTRL          81\n",
+       "AVIATION             1629\n",
+       "BOARD OF ELECTION     107\n",
+       "BOARD OF ETHICS         8\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries[\"Department\"].value_counts()\n",
+    "salaries.groupby([\"Department\"])[\"Salary or Hourly\"].count().head()"
    ]
   },
   {
@@ -122,11 +299,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "# 30$/hour\n",
+    "# one sample test\n",
+    "\n",
+    "# 95% two sided confidence interval\n",
+    "\n",
+    "ttest_1samp(salaries[\"Hourly Rate\"].dropna().tolist(),30)\n",
+    "#salaries_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1615120243114947e-92"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvalue = 4.3230240486229894e-92/2\n",
+    "pvalue\n",
+    "#pvalue < 0,05 : se rechaza la hipótesis"
    ]
   },
   {
@@ -140,27 +357,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "#salaries.loc[salaries[\"Department\"]==\"POLICE\"]\n",
+    "\n",
+    "# ttest_1samp((salaries[\"Annual Salary\"].loc[salaries[\"Department\"]==\"POLICE\"]).dropna().tolist(),86000)\n",
+    "t = ttest_1samp(salaries[salaries[\"Department\"]==\"POLICE\"][\"Annual Salary\"].dropna().tolist(),86000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0010301701775482569"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.pvalue/2\n",
+    "\n",
+    "    #¿Están cobrando más de 86,000?\n",
+    "# using a 95% confidence interval >    pvalue > 0,05   -> Ho"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the `crosstab` function, find the department that has the most hourly workers. "
+    "Using the `crosstab` function, find the department that has the most hourly workers "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WATER MGMNT</th>\n",
+       "      <td>1513</td>\n",
+       "      <td>366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OEMC</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1082</td>\n",
+       "      <td>547</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GENERAL SERVICES</th>\n",
+       "      <td>765</td>\n",
+       "      <td>215</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly  Salary\n",
+       "Department                      \n",
+       "STREETS & SAN       1862     336\n",
+       "WATER MGMNT         1513     366\n",
+       "OEMC                1273     829\n",
+       "AVIATION            1082     547\n",
+       "GENERAL SERVICES     765     215"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "pd.crosstab(salaries[\"Department\"],salaries[\"Salary or Hourly\"])\\\n",
+    "                                    .sort_values(by =\"Hourly\", ascending=False).head()\n",
+    "# The department that has the most hourly workers is STREETS & SCANS"
    ]
   },
   {
@@ -172,11 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6689265282353859e-21"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "t_1 = ttest_1samp(salaries[\"Hourly Rate\"].loc[salaries[\"Department\"]==\"STREETS & SAN\"].dropna().tolist(),35)\n",
+    "t_1.pvalue/2\n",
+    "\n",
+    "#pvalue < threshold  -> H1: Their hourly wage is less than $35/hour"
    ]
   },
   {
@@ -199,12 +535,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "#### prueba con PPF\n",
+    "confidence = 0.95\n",
+    "\n",
+    "mean= np.mean(hourly)\n",
+    "sem = scipy.stats.sem(hourly)  #error estándar de la media\n",
+    "h = sem * scipy.stats.t.ppf(confidence/2, len(hourly)-1)  #df grados de libertad: tamaño de la muestra -1\n",
+    "print(mean, mean-h, mean+h)\n",
+    "\n",
+    "#interval(0.05, hourly, scale=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.78855771628024\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(32.780077183391256, 32.79703824916922)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# construct a 95% confidence interval for the mean hourly wage of all hourly workers\n",
+    "    # el 95% de los casos está en un segmento concreto.\n",
+    "    # t.interval function\n",
+    "\n",
+    "hourly = salaries[\"Hourly Rate\"].dropna() \n",
+    "\n",
+    "loc=np.mean(hourly)\n",
+    "print(loc)\n",
+    "scipy.stats.t.interval(0.05, len(hourly)-1, loc=np.mean(hourly), scale=scipy.stats.sem(hourly))\n",
+    "\n",
+    "#len(hourly)-1      df grados de libertad: tamaño de la muestra -1\n",
+    "#scale=scipy.stats.sem(hourly)       #error estándar de la media"
    ]
   },
   {
@@ -216,11 +596,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86778.68160534588, 86795.31797495698)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# salaried employeed\n",
+    "salaried = salaries[\"Annual Salary\"].loc[salaries[\"Salary or Hourly\"]==\"Salary\"]\n",
+    "\n",
+    "conf_95 = scipy.stats.t.interval(0.05, len(salaried)-1, loc=np.mean(salaried), scale=scipy.stats.sem(salaried))\n",
+    "conf_95 "
    ]
   },
   {
@@ -238,11 +633,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# the proportion of a group in our sample is significantly different than a fraction.\n",
+    "import statsmodels as stm\n",
+    "from statsmodels.stats.proportion import proportions_ztest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proportions_ztest(salaries['Salary or Hourly'].value_counts()[1], len(salaries), 0.25)"
    ]
   }
  ],
